--- a/roles/plugins/network-plugins/templates/calico/calicoctl-daemonset.yaml.j2
+++ b/roles/plugins/network-plugins/templates/calico/calicoctl-daemonset.yaml.j2
@@ -16,6 +16,15 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: calicoctl
 rules:
+  # Cluster role which grants access to the privileged pod security policy
+  - apiGroups:
+    - extensions
+    resourceNames:
+    - privileged
+    resources:
+    - podsecuritypolicies
+    verbs:
+    - use
   - apiGroups: [""]
     resources:
       - namespaces
